# pythonwebapp

./: LICENSE  SONARQUBE_PR_SETUP.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: sonarqube-code-scanning.yml  sonarqube-pr-scan.yml
.scannerwork/: dependency-files.tar.xz  report-task.txt
.scannerwork/architecture/py/: app-__init___py.udg  app-config_py.udg  app-main_py.udg  tests-__init___py.udg  tests-test_main_py.udg
.scannerwork/ir/python/: collected.metadata  collected.typedefs  ir_000000041.ir  ir_000000042.ir  ir_000000043.ir  ir_000000044.ir  ir_000000045.ir  ir_000000046.ir  ir_000000047.ir
.scannerwork/ucfg2/python/: all.typedefs  ucfg___init___eClient_connect.ucfg  ucfg___init___ient_BaseClient.ucfg  ucfg___init___pp___init___py1.ucfg  ucfg___init___ps_soft_unicode.ucfg  ucfg___init___put_metric_data.ucfg  ucfg___init___ts___init___py2.ucfg  ucfg_config__app_config_py3.ucfg  ucfg_main__main_get_users.ucfg  ucfg_main__main_get_users_1.ucfg  ucfg_main__update_profile.ucfg  ucfg_main_ain_delete_user.ucfg  ucfg_main_ain_load_config.ucfg  ucfg_main_ain_remove_user.ucfg  ucfg_main_app_main_foo.ucfg  ucfg_main_app_main_get_db.ucfg  ucfg_main_app_main_home.ucfg  ucfg_main_app_main_login.ucfg  ucfg_main_app_main_xss.ucfg  ucfg_main_get_user_orders.ucfg  ucfg_main_in_app_main_py5.ucfg  ucfg_main_in_create_order.ucfg  ucfg_main_in_search_users.ucfg  ucfg_main_in_upload_to_s3.ucfg  ucfg_main_main_simple_sql.ucfg  ucfg_main_n_upload_avatar.ucfg  ucfg_main_update_password.ucfg  ucfg_test_main__main_test_root.ucfg  ucfg_test_main_s_test_main_py4.ucfg
app/: main.py
