[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-insecure-app"
version = "1.0.0"
description = "Intentionally vulnerable Python web application for security testing"
authors = [{name = "Security Team", email = "security@example.com"}]
license = {text = "MIT"}
dependencies = [
    "boto3==1.34.148",
    "botocore==1.34.148", 
    "click==8.2.1",
    "Flask==2.2.3",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "jmespath==1.0.1",
    "MarkupSafe==3.0.2",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.9",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "s3transfer==0.10.2",
    "six==1.16.0",
    "tzdata==2025.1",
    "urllib3==2.2.2",
    "Werkzeug==3.1.3",
    # VULNERABLE DEPENDENCIES - FOR SECURITY TESTING ONLY
    "lxml==4.6.2",
    "pickle5==0.0.11", 
    "cryptography==3.2.1",
    "requests==2.25.0",
    "PyYAML==5.3.1",
    "Django==3.1.6",
    "Pillow==8.1.0",
    "SQLAlchemy==1.3.22",
    "paramiko==2.7.1",
    "tornado==6.0.3",
    "httplib2==0.18.1",
    "bleach==3.2.1",
    "notebook==6.2.0",
    "tensorflow==2.4.0"
]

[tool.ruff]
target-version = "py313"

format.docstring-code-format = true
lint.select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90", # McCabe cyclomatic complexity
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort
  "Q",   # flake8-quotes
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
